# BUGHUNTER-AI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  LICENSE_ANTI_CSAM.md  LICENSE_PRIVACY.md  README.md  SECURITY.md  bootstrap.sh  bug_hunt.py  generate_sft.sql  grab.sh  install.sh  lint_report.txt  lint_report_v2.txt  merge_and_quant.sh  pack.sh  pyproject.toml  release_zip.sh  repro.py  skills.py  slm-agent-bundle.py  train_lora.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data_curation/: creds.jsonl  device.jsonl  ip_log.jsonl  ips.jsonl  ips.jsonl.react.jsonl  phish_log.jsonl  termux_mass_hunter.py  titan_ip_logger.py  titan_phish.py  youtube_scraper.py
eval/: functional.jsonl  redteam.jsonl  run_eval.py
prompts/: system.md
skills/: cve_lookup.py  port_audit.py  recon_subdomains.py  vuln_scan.py  wordlist.py
slm/: __init__.py  agent.py  api_passthrough.py  bench.py  budget.py  canary.py  cli.py  cost.py  dag.py  device.py  discord_bot.py  doctor.py  findings.py  init.py  llm.py  mcp_server.py  panic.py  platform_context.py  provenance.py  queue.py  reflection.py  refusal.py  retrieval.py  session.py  setup_wizard.py  tool_installer.py  tools.py  ui_repl.py  ui_tui.py  vault.py  web_chat.py  workflows.py
slm/core/: __init__.py  executor_guards.py  hard_blocks.yaml  hard_blocks_data.py  prowler.py  scope_enforcer.py  titan_logic.py
slm/prompts/: agent.py  imatrix_corpus.md  system.md
slm/prompts/core/: __init__.py  executor_guards.py  hard_blocks.yaml  scope_enforcer.py
slm/training/: install.sh
slm/web/static/: style.css
slm/web/templates/: index.html
tests/: conftest.py  test_canary.py  test_provenance.py  test_refusal.py  test_safety.py  test_scope.py  test_tools.py
